UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_911_Notifications__c/ftr_911_Notifications__c.object-meta.xml
<CustomObject>
    <label>911 Notifications</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>911 Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>