UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_911_Notifications__c/fields/Department_System__c.field-meta.xml
<CustomField>
    <fullName>Department_System__c</fullName>
    <label>Department/System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>