UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_911_Notifications__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>911 Notifications</relationshipLabel>
    <relationshipName>X911_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>